# Axon

./: .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json  serve.sh
.codex-plugin/: plugin.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  scorecard.yml  security-scan.yml
docs/: GITHUB_SECURITY.md  PLAN.md  SPEC_PHASE1.md  SPEC_PHASE2.md  SPEC_PHASE3.md  SPEC_PHASE4.md  VERIFICATION.md  integration-review-plan.md  localize-filename-source-and-clamp-fix-plan.md  localize-fusion-review-plan.md  localize-identifier-query-fix-plan.md
docs/superpowers/plans/: 2026-07-07-axon-v03-debug-upgrades.md
eval/: EVAL.md  run_localize_eval.py
src/axon/: __init__.py  _state_runner.py  _trace_runner.py  bm25.py  cli.py  index.py  mcp_stdio.py  parsing.py  sandbox.py  server.py  store.py  tool_registry.py
src/axon/providers/: base.py  builtin.py  cortex.py  cortex_mcp.py  grep.py  select.py
src/axon/rules/: axon_cpp_qml.yml  axon_python.yml
src/axon/tools/: graph_context.py  inspect_run.py  investigate.py  localize.py  rank_patches.py  refute.py  repro.py  run_tests.py  sast.py  spectrum.py  triage.py  verify_fix.py
tests/: conftest.py  fake_cortex_mcp.py  test_bm25.py  test_cortex_mcp.py  test_index.py  test_inspect.py  test_investigate.py  test_localize.py  test_mcp_stdio.py  test_parsing.py  test_plugin_manifests.py  test_providers.py  test_rank_patches.py  test_refute.py  test_repro.py  test_run_tests_tool.py  test_sandbox.py  test_sast.py  test_server_cli.py  test_spectrum.py  test_store.py  test_triage.py  test_verify_fix.py
