[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "axon-debug"
version = "0.1.0"
description = "Axon — root-cause debugging & vulnerability MCP server for AI agents. Standalone; Cortex-accelerated when present."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2",
    "semgrep>=1.90",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
axon = "axon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
