[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "axon-debug"
version = "0.2.1"
description = "Axon — root-cause debugging & vulnerability MCP server for AI agents. Standalone; Cortex-accelerated when present."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2",
]

[project.optional-dependencies]
security = ["semgrep>=1.90"]
dev = ["pytest>=8"]

[project.scripts]
axon = "axon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
axon = ["rules/*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
