[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "axon-debug"
version = "0.5.2"
description = "Axon — root-cause debugging & vulnerability MCP server for AI agents. Standalone; Cortex-accelerated when present."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AlilKuizon" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "mcp>=1.2",
]

[project.optional-dependencies]
security = ["semgrep>=1.90"]
dev = ["pytest>=8"]

[project.scripts]
axon = "axon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
axon = ["rules/*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
